@@ -1,4 +1,9 @@
 
+2018-02-16  Dave Pitts <dpitts@cozx.com>
+
+	* testsuite.src/listings.at: BUG #494 Added test case for embedded
+	  quotes, eg. 'yyy-'hello
+
 2017-11-11  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* testsuite.src/run_fundamental.at: added tests for DEBUG module
