@@ -1,4 +1,9 @@
 
+2018-02-16  Dave Pitts <dpitts@cozx.com>
+
+	* cobc.c (get_next_token): BUG #494 Fixed scanning of tokens with 
+	  embedded quotes, eg. 'yyy-'hello
+
 2018-02-15  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* typeck.c (validate_move, move_warning): show literal size for
